--- a/config.json
+++ b/config.json
@@ -7,9 +7,10 @@
   "image_save_directory": "captured_cards",
   "cache_directory": "card_cache",
   "database_path": "card_database.db",
-  "tesseract_path": "",
+  "paddleocr_models_path": "paddleocr_models",
   "window_width": 1200,
   "window_height": 800,
   "detection_min_area": 10000,
-  "detection_max_area": 500000
+  "detection_max_area": 500000,
+  "tesseract_path": ""
 }
